tests/baselines/reference/callSignatureWithoutAnnotationsOrBody.errors.txt
callSignatureWithoutAnnotationsOrBody.ts(11,10): error TS2454: Variable 'i' is used before being assigned.
callSignatureWithoutAnnotationsOrBody.ts(12,10): error TS2454: Variable 'i' is used before being assigned.
callSignatureWithoutAnnotationsOrBody.ts(18,10): error TS2454: Variable 'a' is used before being assigned.
callSignatureWithoutAnnotationsOrBody.ts(19,10): error TS2454: Variable 'a' is used before being assigned.


==== callSignatureWithoutAnnotationsOrBody.ts (4 errors) ====
    // Call signatures without a return type annotation and function body return 'any'
    
    function foo(x) { }
    var r = foo(1); // void since there's a body
    
    interface I {
        ();
        f();
    }
    var i: I;
    var r2 = i();
             ~
!!! error TS2454: Variable 'i' is used before being assigned.
    var r3 = i.f();
             ~
!!! error TS2454: Variable 'i' is used before being assigned.
    
    var a: {
        ();
        f();
    };
    var r4 = a();
             ~
!!! error TS2454: Variable 'a' is used before being assigned.
    var r5 = a.f();
             ~
!!! error TS2454: Variable 'a' is used before being assigned.